--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEMA ERP ABP - Home</title>
+    <title>SISTEMA ERP ABP - Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -32,11 +32,13 @@
         .profile-menu button { width: 100%; text-align: left; padding: 12px 15px; background: none; border: none; cursor: pointer; color: #e74c3c; font-weight: bold; }
 
         /* CONTENT */
-        .content { max-width: 1000px; margin: auto; padding: 20px; }
+        .content { max-width: 1100px; margin: auto; padding: 20px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
-        .card { background: white; padding: 30px; border-radius: 12px; text-decoration: none; color: #334155; text-align: center; border: 1px solid #e2e8f0; transition: 0.3s; }
+        .card { background: white; padding: 30px; border-radius: 12px; text-decoration: none; color: #334155; text-align: center; border: 1px solid #e2e8f0; transition: 0.3s; display: flex; flex-direction: column; align-items: center; }
         .card:hover { transform: translateY(-5px); border-color: var(--primary); box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
         .card i { font-size: 45px; color: var(--primary); margin-bottom: 15px; }
+        .card h3 { margin: 10px 0; }
+        .card p { font-size: 0.9em; color: #64748b; }
     </style>
 </head>
 <body>
@@ -60,12 +62,13 @@
         <div style="padding: 25px; font-weight: bold; color: var(--primary); font-size: 1.2em;">MENU</div>
         <a href="index.html"><i class="fas fa-chart-line"></i> Dashboard</a>
         <a href="bloco_de_notas/bloco_de_notas.html"><i class="fas fa-sticky-note"></i> Bloco de Notas</a>
-        <a href="#"><i class="fas fa-users"></i> Clientes (Breve)</a>
+        <a href="clientes/clientes.html"><i class="fas fa-users"></i> Clientes</a>
+        <a href="enderecos/enderecos.html"><i class="fas fa-map-marker-alt"></i> Endereços</a>
     </div>
 
     <div class="content">
         <h1>Painel Geral</h1>
-        <p>Bem-vindo ao centro de operações do seu ERP.</p>
+        <p>Selecione um módulo para gerenciar seus dados.</p>
         
         <div class="grid">
             <a href="bloco_de_notas/bloco_de_notas.html" class="card">
@@ -73,11 +76,18 @@
                 <h3>Bloco de Notas</h3>
                 <p>Anote e organize suas ideias na nuvem.</p>
             </a>
-            <div class="card" style="opacity: 0.6; cursor: not-allowed;">
+
+            <a href="clientes/clientes.html" class="card">
                 <i class="fas fa-users"></i>
-                <h3>Módulo Clientes</h3>
-                <p>Em breve: Gestão completa de cadastros.</p>
-            </div>
+                <h3>Gestão de Clientes</h3>
+                <p>Cadastro e gerenciamento completo de clientes.</p>
+            </a>
+
+            <a href="enderecos/enderecos.html" class="card">
+                <i class="fas fa-map-marker-alt"></i>
+                <h3>Endereços</h3>
+                <p>Gerencie localizações e logradouros.</p>
+            </a>
         </div>
     </div>
 
@@ -86,6 +96,7 @@
         const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+        // Funções de Interface
         function toggleSidebar() {
             document.getElementById('sidebar').classList.toggle('active');
             document.querySelector('.sidebar-overlay').classList.toggle('active');
@@ -94,16 +105,21 @@
             document.getElementById('profileMenu').classList.toggle('active');
         }
 
+        // Verifica Sessão
         async function checkUser() {
             const { data: { session } } = await _supabase.auth.getSession();
-            if (!session) window.location.href = 'login.html';
-            document.getElementById('userEmail').innerText = session.user.email;
+            if (!session) {
+                window.location.href = 'login.html';
+            } else {
+                document.getElementById('userEmail').innerText = session.user.email;
+            }
         }
 
         async function logout() {
             await _supabase.auth.signOut();
             window.location.href = 'login.html';
         }
+
         checkUser();
     </script>
 </body>
