--- a/projeto/erp/clientes/clientes.html
+++ b/projeto/erp/clientes/clientes.html
@@ -219,31 +219,59 @@
         }
 
         async function editFull(id) {
-            const { data: c } = await _supabase.from('clientes').select('*, enderecos(*)').eq('id', id).single();
-            if (c) {
-                document.getElementById('edit-id').value = c.id;
-                document.getElementById('nome_completo').value = c.nome_completo;
-                document.getElementById('cpf').value = c.cpf;
-                document.getElementById('data_nascimento').value = c.data_nascimento;
-                document.getElementById('email').value = c.email || '';
-                document.getElementById('telefone').value = c.telefone || '';
-                document.getElementById('rg').value = c.rg || '';
+    try {
+        // Busca o cliente e tenta trazer o endereço junto
+        const { data: c, error } = await _supabase
+            .from('clientes')
+            .select('*, enderecos(*)')
+            .eq('id', id)
+            .single();
 
-                if (c.enderecos && c.enderecos[0]) {
-                    const e = c.enderecos[0];
-                    document.getElementById('cep').value = e.cep || '';
-                    document.getElementById('logradouro').value = e.logradouro || '';
-                    document.getElementById('numero').value = e.numero || '';
-                    document.getElementById('bairro').value = e.bairro || '';
-                    document.getElementById('cidade').value = e.cidade || '';
-                    document.getElementById('estado').value = e.estado || '';
-                }
-                document.getElementById('btn-save').innerText = "Atualizar Cadastro";
-                document.getElementById('btn-cancel').style.display = "block";
-                window.scrollTo(0,0);
+        if (error) throw error;
+
+        if (c) {
+            // 1. Preenche os campos básicos do Cliente
+            document.getElementById('edit-id').value = c.id;
+            document.getElementById('nome_completo').value = c.nome_completo || '';
+            document.getElementById('cpf').value = c.cpf || '';
+            document.getElementById('data_nascimento').value = c.data_nascimento || '';
+            document.getElementById('email').value = c.email || '';
+            document.getElementById('telefone').value = c.telefone || '';
+            document.getElementById('rg').value = c.rg || '';
+
+            // 2. Preenche os campos de Endereço (se existirem)
+            // Verificamos se 'enderecos' é um array e se tem ao menos um item
+            if (c.enderecos && Array.isArray(c.enderecos) && c.enderecos.length > 0) {
+                const e = c.enderecos[0];
+                document.getElementById('cep').value = e.cep || '';
+                document.getElementById('logradouro').value = e.logradouro || '';
+                document.getElementById('numero').value = e.numero || '';
+                document.getElementById('bairro').value = e.bairro || '';
+                document.getElementById('cidade').value = e.cidade || '';
+                document.getElementById('estado').value = e.estado || '';
+            } else {
+                // Limpa os campos de endereço caso o cliente não tenha um
+                document.getElementById('cep').value = '';
+                document.getElementById('logradouro').value = '';
+                document.getElementById('numero').value = '';
+                document.getElementById('bairro').value = '';
+                document.getElementById('cidade').value = '';
+                document.getElementById('estado').value = '';
             }
-        }
 
+            // 3. Ajusta a interface visual
+            document.getElementById('form-title').innerText = "Editando Cliente: " + c.nome_completo;
+            document.getElementById('btn-save').innerText = "Atualizar Cadastro";
+            document.getElementById('btn-cancel').style.display = "block";
+            
+            // Sobe a tela para o formulário
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+    } catch (err) {
+        console.error("Erro ao carregar dados para edição:", err);
+        alert("Erro ao carregar dados: " + err.message);
+    }
+}
         function resetForm() {
             document.getElementById('edit-id').value = '';
             document.querySelectorAll('input').forEach(i => i.value = '');
