--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -7,64 +7,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --primary: #3ecf8e; --dark: #0f172a; --sidebar-w: 260px; }
         * { box-sizing: border-box; }
-        body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #f1f5f9; padding-top: 70px; }
-
-        /* NAVBAR */
-        .navbar { position: fixed; top: 0; left: 0; right: 0; height: 65px; background: var(--dark); color: white; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; z-index: 1000; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
-        .nav-left { display: flex; align-items: center; gap: 15px; }
-        .menu-btn { font-size: 22px; cursor: pointer; color: var(--primary); background: none; border: none; padding: 5px; }
-        .user-avatar { width: 40px; height: 40px; border-radius: 50%; background: var(--primary); cursor: pointer; display: flex; align-items: center; justify-content: center; font-weight: bold; color: var(--dark); border: 2px solid white; }
-
-        /* SIDEBAR */
-        .sidebar { position: fixed; top: 0; left: -260px; width: var(--sidebar-w); height: 100%; background: var(--dark); color: white; transition: 0.3s; z-index: 1001; padding-top: 20px; }
-        .sidebar.active { left: 0; }
-        .sidebar-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); display: none; z-index: 1000; }
-        .sidebar-overlay.active { display: block; }
-        .sidebar a { display: block; padding: 15px 25px; color: white; text-decoration: none; border-bottom: 1px solid #1e293b; transition: 0.2s; }
-        .sidebar a:hover { background: #1e293b; color: var(--primary); padding-left: 35px; }
-
-        /* PROFILE MENU */
-        .profile-menu { position: absolute; top: 70px; right: 10px; background: white; color: var(--dark); border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); display: none; width: 220px; z-index: 1002; }
-        .profile-menu.active { display: block; }
-        .profile-menu .info { padding: 15px; border-bottom: 1px solid #eee; font-size: 0.85em; word-break: break-all; color: #64748b; }
-        .profile-menu button { width: 100%; text-align: left; padding: 12px 15px; background: none; border: none; cursor: pointer; color: #e74c3c; font-weight: bold; }
-
-        /* CONTENT */
+        body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #f1f5f9; padding-top: 80px; }
+        
         .content { max-width: 1100px; margin: auto; padding: 20px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
         .card { background: white; padding: 30px; border-radius: 12px; text-decoration: none; color: #334155; text-align: center; border: 1px solid #e2e8f0; transition: 0.3s; display: flex; flex-direction: column; align-items: center; }
-        .card:hover { transform: translateY(-5px); border-color: var(--primary); box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
-        .card i { font-size: 45px; color: var(--primary); margin-bottom: 15px; }
+        .card:hover { transform: translateY(-5px); border-color: #3ecf8e; box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
+        .card i { font-size: 45px; color: #3ecf8e; margin-bottom: 15px; }
         .card h3 { margin: 10px 0; }
         .card p { font-size: 0.9em; color: #64748b; }
     </style>
 </head>
 <body>
-
-    <nav class="navbar">
-        <div class="nav-left">
-            <button class="menu-btn" onclick="toggleSidebar()"><i class="fas fa-bars"></i></button>
-            <span style="font-weight: bold; letter-spacing: 1px;">SISTEMA ERP ABP</span>
-        </div>
-        <div class="nav-right">
-            <div class="user-avatar" onclick="toggleProfile()">A</div>
-            <div class="profile-menu" id="profileMenu">
-                <div class="info"><strong>Usuário:</strong><br><span id="userEmail">...</span></div>
-                <button onclick="logout()"><i class="fas fa-sign-out-alt"></i> Sair da Conta</button>
-            </div>
-        </div>
-    </nav>
-
-    <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
-    <div class="sidebar" id="sidebar">
-        <div style="padding: 25px; font-weight: bold; color: var(--primary); font-size: 1.2em;">MENU</div>
-        <a href="index.html"><i class="fas fa-chart-line"></i> Dashboard</a>
-        <a href="bloco_de_notas/bloco_de_notas.html"><i class="fas fa-sticky-note"></i> Bloco de Notas</a>
-        <a href="clientes/clientes.html"><i class="fas fa-users"></i> Clientes</a>
-        <a href="enderecos/enderecos.html"><i class="fas fa-map-marker-alt"></i> Endereços</a>
-    </div>
 
     <div class="content">
         <h1>Painel Geral</h1>
@@ -96,31 +51,13 @@
         const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
         const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-        // Funções de Interface
-        function toggleSidebar() {
-            document.getElementById('sidebar').classList.toggle('active');
-            document.querySelector('.sidebar-overlay').classList.toggle('active');
-        }
-        function toggleProfile() {
-            document.getElementById('profileMenu').classList.toggle('active');
-        }
-
-        // Verifica Sessão
         async function checkUser() {
             const { data: { session } } = await _supabase.auth.getSession();
-            if (!session) {
-                window.location.href = 'login.html';
-            } else {
-                document.getElementById('userEmail').innerText = session.user.email;
-            }
+            if (!session) window.location.href = 'login.html';
         }
-
-        async function logout() {
-            await _supabase.auth.signOut();
-            window.location.href = 'login.html';
-        }
-
         checkUser();
     </script>
+
+    <script src="menu.js"></script>
 </body>
 </html>
