--- a/projeto/erp/login.html
+++ b/projeto/erp/login.html
@@ -1,118 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Codificação de caracteres -->
     <meta charset="UTF-8">
+
+    <!-- Responsividade para dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Título da aba -->
     <title>Login - SISTEMA ERP ABP</title>
+
+    <!-- SDK do Supabase (frontend) -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <style>
-        :root { --primary: #3ecf8e; --dark: #1e293b; --bg: #0f172a; }
-        body { font-family: 'Segoe UI', sans-serif; background-color: var(--bg); display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
-        .login-card { background: white; padding: 40px; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.3); width: 100%; max-width: 400px; text-align: center; }
-        h1 { color: var(--dark); margin-bottom: 5px; font-size: 24px; }
-        h2 { color: #64748b; margin-bottom: 25px; font-size: 16px; font-weight: normal; }
-        .input-container { position: relative; margin-bottom: 15px; }
-        input { width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 6px; box-sizing: border-box; font-size: 16px; }
-        .toggle-password { position: absolute; right: 12px; top: 50%; transform: translateY(-50%); cursor: pointer; background: none; border: none; font-size: 18px; color: #666; }
-        button.main-btn { width: 100%; padding: 12px; border: none; border-radius: 6px; background-color: var(--primary); color: white; font-weight: bold; font-size: 16px; cursor: pointer; transition: 0.3s; }
-        button.main-btn:hover { background-color: #34b27b; }
-        .extra-links { margin-top: 20px; display: flex; flex-direction: column; gap: 10px; font-size: 14px; }
-        .link { color: #4a90e2; text-decoration: none; cursor: pointer; font-weight: 500; }
-        .btn-back { background: #e2e8f0; color: #475569; padding: 8px 12px; border-radius: 6px; border: none; margin-bottom: 20px; cursor: pointer; display: none; }
-    </style>
+
+    <!-- CSS específico da tela de login -->
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 
-<div class="login-card">
-    <button id="btn-back" class="btn-back" onclick="toggleMode()">← Voltar para o Login</button>
-    <h1>SISTEMA ERP ABP</h1>
-    <h2 id="form-subtitle">Faça login para acessar o ERP</h2>
+    <!-- Card central de autenticação -->
+    <div class="login-card">
 
-    <div class="input-container" id="email-group">
-        <input type="email" id="email" placeholder="Seu e-mail">
+        <!-- Botão de retorno (usado em recuperação/cadastro) -->
+        <button id="btn-back" class="btn-back" onclick="toggleMode()">
+            ← Voltar para o Login
+        </button>
+
+        <!-- Título principal -->
+        <h1>SISTEMA ERP ABP</h1>
+
+        <!-- Subtítulo dinâmico -->
+        <h2 id="form-subtitle">Faça login para acessar o ERP</h2>
+
+        <!-- Campo de e-mail -->
+        <div class="input-container" id="email-group">
+            <input type="email" id="email" placeholder="Seu e-mail">
+        </div>
+
+        <!-- Campo de senha -->
+        <div class="input-container" id="pass-group">
+            <input type="password" id="password" placeholder="Sua senha">
+
+            <!-- Botão para alternar visibilidade da senha -->
+            <button type="button" class="toggle-password" onclick="toggleVisibility()">
+                👁️
+            </button>
+        </div>
+
+        <!-- Botão principal (login / cadastro / salvar senha) -->
+        <button class="main-btn" id="btn-auth" onclick="handleAuth()">
+            Entrar
+        </button>
+
+        <!-- Links auxiliares -->
+        <div class="extra-links">
+            <span id="link-forgot" class="link" onclick="forgotPassword()">
+                Esqueci minha senha
+            </span>
+
+            <span id="link-toggle" class="link" onclick="toggleMode()">
+                Não tem conta? Cadastre-se agora
+            </span>
+        </div>
     </div>
 
-    <div class="input-container" id="pass-group">
-        <input type="password" id="password" placeholder="Sua senha">
-        <button type="button" class="toggle-password" onclick="toggleVisibility()">👁️</button>
-    </div>
+    <!-- Script principal do login -->
+    <script src="js/login.js"></script>
 
-    <button class="main-btn" id="btn-auth" onclick="handleAuth()">Entrar</button>
-
-    <div class="extra-links">
-        <span id="link-forgot" class="link" onclick="forgotPassword()">Esqueci minha senha</span>
-        <span id="link-toggle" class="link" onclick="toggleMode()">Não tem conta? Cadastre-se agora</span>
-    </div>
-</div>
-
-<script>
-    const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
-    const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
-    const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-    let isLogin = true;
-
-    function toggleMode() {
-        isLogin = !isLogin;
-        document.getElementById('form-subtitle').innerText = isLogin ? 'Faça login para acessar o ERP' : 'Crie sua conta gratuita';
-        document.getElementById('btn-auth').innerText = isLogin ? 'Entrar' : 'Criar Conta';
-        document.getElementById('btn-back').style.display = isLogin ? 'none' : 'inline-block';
-        document.getElementById('link-toggle').style.display = isLogin ? 'block' : 'none';
-        document.getElementById('link-forgot').style.display = isLogin ? 'block' : 'none';
-        document.getElementById('email-group').style.display = 'block';
-    }
-
-    function toggleVisibility() {
-        const passInput = document.getElementById('password');
-        const toggleBtn = document.querySelector('.toggle-password');
-        passInput.type = (passInput.type === 'password') ? 'text' : 'password';
-        toggleBtn.innerText = (passInput.type === 'password') ? '👁️' : '🙈';
-    }
-
-    async function handleAuth() {
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-        if (isLogin) {
-            const { data, error } = await _supabase.auth.signInWithPassword({ email, password });
-            if (error) alert("Erro: " + error.message);
-            else window.location.href = 'index.html'; // Redireciona para o Dashboard
-        } else {
-            const { data, error } = await _supabase.auth.signUp({ email, password });
-            if (error) alert("Erro: " + error.message);
-            else alert("Cadastro realizado! Verifique seu e-mail.");
-        }
-    }
-
-    async function forgotPassword() {
-        const email = document.getElementById('email').value;
-        if (!email) return alert("Digite seu e-mail.");
-        const { error } = await _supabase.auth.resetPasswordForEmail(email, { redirectTo: window.location.href });
-        if (error) alert(error.message);
-        else alert("Link de recuperação enviado!");
-    }
-
-    async function checkRecovery() {
-        const hash = window.location.hash;
-        if (hash && (hash.includes("type=recovery") || hash.includes("access_token="))) {
-            document.getElementById('form-subtitle').innerText = "🔑 Defina sua nova senha";
-            document.getElementById('email-group').style.display = 'none';
-            document.getElementById('btn-auth').innerText = "Salvar Nova Senha";
-            document.getElementById('btn-auth').onclick = updatePassword;
-            document.getElementById('link-forgot').style.display = 'none';
-            document.getElementById('link-toggle').style.display = 'none';
-            document.getElementById('btn-back').style.display = 'none';
-        }
-    }
-
-    async function updatePassword() {
-        const newPassword = document.getElementById('password').value;
-        if (newPassword.length < 6) return alert("Mínimo 6 caracteres.");
-        const { error } = await _supabase.auth.updateUser({ password: newPassword });
-        if (error) alert(error.message);
-        else { alert("Senha atualizada!"); window.location.hash = ""; window.location.reload(); }
-    }
-
-    window.onload = checkRecovery;
-</script>
+    <!-- Script do menu/navbar (padrão do sistema) -->
+    <script src="js/navbar.js"></script>
 </body>
 </html>
