--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -23,31 +23,31 @@
 
     <!-- Conteúdo central do dashboard -->
     <div class="content">
-        <h1>Painel Geral</h1>
-        <p>Selecione um módulo para gerenciar seus dados.</p>
+        <h1>Seja bem-vindo ao meu sistema!</h1>
+        <p>Selecione no menu um módulo para gerenciar seus dados!</p>
 
         <!-- Grade de cards -->
         <div class="grid">
 
             <!-- Card: Bloco de Notas -->
-            <a href="bloco_de_notas/bloco_de_notas.html" class="card">
+            <a href="bloco_de_notas.html" class="card">
                 <i class="fas fa-sticky-note"></i>
                 <h3>Bloco de Notas</h3>
                 <p>Anote e organize suas ideias na nuvem.</p>
             </a>
 
             <!-- Card: Clientes -->
-            <a href="clientes/clientes.html" class="card">
+            <a href="clientes.html" class="card">
                 <i class="fas fa-users"></i>
                 <h3>Gestão de Clientes</h3>
                 <p>Cadastro e gerenciamento completo de clientes.</p>
             </a>
 
-            <!-- Card: Endereços -->
-            <a href="enderecos/enderecos.html" class="card">
+            <!-- Card: Fornecedores -->
+            <a href="fornecedores.html" class="card">
                 <i class="fas fa-map-marker-alt"></i>
-                <h3>Endereços</h3>
-                <p>Gerencie localizações e logradouros.</p>
+                <h3>fornecedores</h3>
+                <p>Gerencie dados e contatos dos fornecedores</p>
             </a>
 
         </div>
