--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -23,9 +23,7 @@
 
     <!-- Conteúdo central do dashboard -->
     <div class="content">
-        <h1>Seja bem-vindo ao meu sistema!</h1>
-        <p>Selecione no menu um módulo para gerenciar seus dados!</p>
-
+        
         <!-- Grade de cards -->
         <div class="grid">
 
@@ -45,12 +43,16 @@
 
             <!-- Card: Fornecedores -->
             <a href="fornecedores.html" class="card">
-                <i class="fas fa-map-marker-alt"></i>
+                <i class="fas fa-users"></i>
                 <h3>fornecedores</h3>
                 <p>Gerencie dados e contatos dos fornecedores</p>
             </a>
 
         </div>
+
+        <h2>Desenvolvedor:Aristides B Pontes</h2>
+        <h3>contato WhatsApp: (91)99242-0981</h3>
+        
     </div>
 
 <!-- Script principal do index -->
