--- a/projeto/erp/login.html
+++ b/projeto/erp/login.html
@@ -62,10 +62,11 @@
         </div>
     </div>
 
+    <h3>DESENVOLVEDOR: ARISTIDES BP</h3>
+    <h3>CONTATO:(91)99242-0981</h3>
+    
     <!-- Script principal do login -->
     <script src="js/login.js"></script>
 
-    <!-- Script do menu/navbar (padrão do sistema) -->
-    <script src="js/navbar.js"></script>
 </body>
 </html>
