--- a/projeto/erp/login.html
+++ b/projeto/erp/login.html
@@ -63,7 +63,7 @@
     </div>
 
     <h3>DESENVOLVEDOR: ARISTIDES BP</h3>
-    <h3>CONTATO:(91)99242-0981</h3>
+    <h3>CONTATO: +55 91 99242-0981</h3>
     
     <!-- Script principal do login -->
     <script src="js/login.js"></script>
