--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Título exibido na aba do navegador -->
-    <title>SISTEMA ERP ABP - Dashboard</title>
+    <title>SISTEMA ERP ABP - Inicio</title>
 
     <!-- Biblioteca oficial do Supabase (frontend) -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
