--- a/projeto/erp/clientes.html
+++ b/projeto/erp/clientes.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- Configurações básicas do documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes - ERP ABP</title>
 
-    <!-- Supabase SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-    <!-- Font Awesome para ícones -->
+    <script src="js/conexao.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- CSS externo -->
     <link rel="stylesheet" href="css/clientes.css">
 </head>
 <body>
 
-    <!-- Container principal -->
     <div class="container">
 
-        <!-- Card do formulário -->
         <div class="card">
             <h3 id="form-title">Novo Cadastro de Cliente</h3>
 
-            <!-- Campo oculto usado para edição -->
             <input type="hidden" id="edit-id">
 
-            <!-- Seção: Informações pessoais -->
             <div class="section-title">Informações Pessoais</div>
             <div class="form-grid">
                 <div><label>Nome Completo *</label><input type="text" id="nome_completo"></div>
@@ -38,7 +32,6 @@
                 <div><label>RG</label><input type="text" id="rg"></div>
             </div>
 
-            <!-- Seção: Endereço -->
             <div class="section-title">Endereço</div>
             <div class="form-grid">
                 <div><label>CEP</label><input type="text" id="cep" maxlength="8" onblur="buscaCEP()"></div>
@@ -49,12 +42,10 @@
                 <div><label>UF</label><input type="text" id="estado" maxlength="2"></div>
             </div>
 
-            <!-- Botões -->
             <button class="btn-add" id="btn-save" onclick="handleSave()">Salvar Cadastro</button>
             <button class="btn-cancel" id="btn-cancel" onclick="resetForm()">Cancelar Edição</button>
         </div>
 
-        <!-- Tabela de clientes -->
         <div class="table-container">
             <table>
                 <thead>
@@ -70,10 +61,9 @@
         </div>
     </div>
 
-    <!-- JavaScript principal -->
-    <script src="clientes.js"></script>
-
-    <!-- Menu externo -->
     <script src="js/navbar.js"></script>
+
+    <script src="js/clientes.js"></script>
+
 </body>
 </html>
