--- a/projeto/erp/fornecedores.html
+++ b/projeto/erp/fornecedores.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- Configurações básicas da página -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fornecedores - ERP ABP</title>
 
-    <!-- SDK do Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-    <!-- Ícones (editar / excluir) -->
+    <script src="js/conexao.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- CSS separado -->
     <link rel="stylesheet" href="css/fornecedores.css">
 </head>
 <body>
 
-    <!-- Container principal -->
     <div class="container">
 
-        <!-- Card do formulário -->
         <div class="card">
             <h3 id="form-title">Novo Cadastro de Fornecedor</h3>
 
-            <!-- Campo oculto usado no modo edição -->
             <input type="hidden" id="edit-id">
 
-            <!-- Dados da empresa -->
             <div class="section-title">Dados da Empresa</div>
             <div class="form-grid">
                 <div style="grid-column: span 2;">
@@ -46,7 +40,6 @@
                 <div><label>Telefone</label><input type="text" id="telefone"></div>
             </div>
 
-            <!-- Endereço -->
             <div class="section-title">Localização</div>
             <div class="form-grid">
                 <div>
@@ -65,12 +58,10 @@
                 <div><label>UF</label><input type="text" id="estado" maxlength="2"></div>
             </div>
 
-            <!-- Botões -->
             <button class="btn-add" id="btn-save" onclick="handleSave()">Salvar Fornecedor</button>
             <button class="btn-cancel" id="btn-cancel" onclick="resetForm()">Cancelar Edição</button>
         </div>
 
-        <!-- Tabela de fornecedores -->
         <div class="table-container">
             <table>
                 <thead>
@@ -86,10 +77,8 @@
         </div>
     </div>
 
-    <!-- JavaScript da página -->
-    <script src="fornecedores.js"></script>
-
-    <!-- Menu externo -->
     <script src="js/navbar.js"></script>
+
+    <script src="js/fornecedores.js"></script>
 </body>
 </html>
