--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -39,6 +39,14 @@
                 <p>Gerencie dados e contatos dos fornecedores</p>
             </a>
 
+
+            <a href="financeiro.html" class="card">
+                <i class="fas fa-sticky-note"></i>
+                <h3>Financeiro</h3>
+                <p>Contas a pagar/receber/relatorios</p>
+            </a>
+            
+
         </div>
         
     </div>
